Fixed more static analysis warnings.
git-svn-id: https://itrust.svn.sourceforge.net/svnroot/itrust@132 12e484f7-5e12-421d-bbfb-6194dbfb34fd